--- a/_includes/_third-party/comments/gitment.html
+++ b/_includes/_third-party/comments/gitment.html
@@ -5,8 +5,8 @@
 <script>
     var gitment = new Gitment({
 		id: '{{page.date}}',
-        owner: '{{site.github_username}}',
-        repo: '{{site.comment_gitment_repo}}',
+        owner: 'pluto-the-lost',
+        repo: 'pluto-the-lost.github.io',
         oauth: {
             client_id: '{{site.comment_gitment_clientId}}',
             client_secret: '{{site.comment_gitment_clientSecret}}',
