--- a/_includes/_third-party/comments/gitment.html
+++ b/_includes/_third-party/comments/gitment.html
@@ -1,4 +1,4 @@
-{% if site.comment_gitment_repo %}
+{% if site.gitment.enable %}
 <div id="gitmentContainer"></div> 
 <script src="https://cdn.jsdelivr.net/gh/theme-next/theme-next-gitment@1/gitment.browser.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/theme-next/theme-next-gitment@1/default.css"/>
